# Settle

./: .env.example  .gitignore  .mcp.json  .test-carol.json  BUG_REPORT.md  CLAUDE.md  ENV_REQUIRED_FOR_FULL_DEMO.md  FINAL_HACKATHON_READINESS_REPORT.md  FINAL_JUDGE_VISIBLE_BUG_FIX_REPORT.md  FINAL_ONCHAIN_AND_VISUAL_AUDIT.md  FINAL_VISUAL_SIGNOFF.md  GAP_CLOSURE_REPORT.md  HACKATHON_DEMO_LOCK.md  HALF_BAKED.md  IKA-PROGRESS.md  LICENSE  MAINNET_MIGRATION.md  PRE_DEMO_FIX_AND_GO_NO_GO.md  PRODUCTION_BLOCKER_FIX_REPORT.md  PROJECT_STATUS.md  PROOF.md  README.md  SECURITY.md  SETUP.md  SIDETRACK-IKA-PLAN.md  THIRD_PARTY_NOTICES.md  VISUAL_AUDIT_REPORT.md  VISUAL_COVERAGE_REPORT.md  codex_strategry.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polish.md  submission.md  tsconfig.base.json  turbo.json
docs/: BUG_26_DEPLOY_LOG.md  BUILD_ORDER.md  DEVNET_PRODUCT_CAPABILITY_SPEC.md  IKA-INTEGRATION.md  IKA-TEST-REPORT.md  OPERATOR_HANDOFF.md  PARITY_DEMO_OUTPUT.md  PRODUCT_SPEC.md  SESSION_REPORT.md  STRATEGY.md  TESTING.md  v0.3-build-plan.md
logs/: api-coverage.json  phase5-all-intents-2026-05-01T19-29-54-903Z.json  phase5-idempotency-2026-05-01T20-27-10-901Z.json  phase5-idempotency-2026-05-02T00-30-23-833Z.json  phase5-idempotency-2026-05-02T03-30-13-502Z.json  phase5-idempotency-2026-05-03T01-27-17-340Z.json  phase5-live-2026-05-01T19-20-00-687Z.json  phase5-live-2026-05-01T19-22-03-614Z.json  phase5-live-2026-05-01T19-23-43-568Z.json  phase5-live-2026-05-02T20-21-56-254Z.json  ui-audit-results.ndjson
programs-ika/: .gitignore  Anchor.toml  Cargo.toml  README.md
programs-ika/keys/: .gitkeep
programs-ika/settle-dwallet-router/: Cargo.toml
programs-ika/settle-dwallet-router/src/: errors.rs  events.rs  lib.rs  policy.rs  state.rs
programs/settle-agent-card/programs/settle-agent-card/: Cargo.toml
programs/settle-agent-card/programs/settle-agent-card/src/: errors.rs  events.rs  lib.rs  state.rs
programs/settle-agent-card/programs/settle-agent-card/src/instructions/: claim_streaming.rs  close_pact.rs  create_card.rs  dispute_delivery_escrow.rs  mod.rs  open_delivery_escrow.rs  open_pact.rs  open_streaming_pact.rs  pause_streaming.rs  record_denial.rs  record_receipt.rs  release_delivery_escrow.rs  resume_streaming.rs  revoke.rs  spend.rs  spend_via_pact.rs
scripts/: airdrop-facilitator.ts  anchor-ix-coverage.ts  api-coverage.ts  api-shape-validate.ts  audit-indexer-handlers.ts  badge-keygen.ts  blink-coverage.ts  bootstrap-funding-wallets.ts  bootstrap-master-wallet.ts  bootstrap-test-wallet.ts  bootstrap-test-wallets.ts  check-idl-drift.ts  check-test-wallet.ts  check-usdc-balances.ts  cnft-setup.ts  compute-program-hash.ts  cron-fire-all.ts  (+56 more)
(+670 files in other folders)
