[package]
name = "settle-agent-card"
version = "0.2.0"
description = "Settle — control layer for AI-agent payments on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "settle_agent_card"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
